# meshoptimizer_bindings

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  setup.py
.github/workflows/: release.yaml
src/: lib.rs  module.cpp  vcacheoptimizer.cpp
